--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
+    "framer-motion": "^10.16.5",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-icons": "^4.12.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/react": "18.2.38",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.11.0",
-    "eslint-config-next": "^13"
+    "eslint-config-next": "^13",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.3.2"
   }
 }
